remove scrollbar, fix splashscreen

--- a/css/mboard-electron.css
+++ b/css/mboard-electron.css
@@ -18,9 +18,32 @@ a, a:visited, a:hover, a:link {
   font-weight: 200;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
   font-weight: 200;
-  letter-spacing: 2px;
+  font-size: 20em;
+  padding: 0px;
+  margin: 0px;
+}
+
+h2 {
+  font-weight: 200;
+  font-size: 8em;
+  padding: 0px;
+  margin: 0px;
+}
+
+h3 {
+  font-weight: 200;
+  font-size: 3em;
+  padding: 0px;
+  margin: 0px;
+}
+
+h4 {
+  font-weight: 200;
+  font-size: 1.5em;
+  padding: 0px;
+  margin: 0px;
 }
 
 center h2 {
@@ -77,6 +100,10 @@ h1 small {
   /*margin-bottom: -80px;*/
   position: absolute;
   top: 0px;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 /* material-components-web overrides */
